8184309: Buld warnings from GCC 7.1 on Fedora 26

Reviewed-by: kbarrett, vlivanov